# mlx-audio-generate

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/plans/: 2026-02-22-musicgen-implementation.md
docs/superpowers/plans/: 2026-03-11-phase-7b-llm-prompt-enhancement.md  2026-03-13-lora-fine-tuning.md
m4l/: README.md  mlx-audiogen.js
mlx_audio_generate/: __init__.py  __main__.py
mlx_audio_generate/cli/: convert.py  generate.py
mlx_audio_generate/models/: __init__.py
mlx_audio_generate/shared/: __init__.py  audio_io.py  encodec.py  hub.py  t5.py
mlx_audiogen/: __init__.py  __main__.py  credentials.py
mlx_audiogen/cli/: convert.py  generate.py  train.py
mlx_audiogen/lora/: flywheel.py  trainer.py
mlx_audiogen/models/: __init__.py
mlx_audiogen/models/demucs/: model.py  (+1 more)
mlx_audiogen/server/: __init__.py  app.py
mlx_audiogen/shared/: encodec.py  hub.py  midi_to_prompt.py  mlx_utils.py  model_registry.py  prompt_suggestions.py  stem_separator.py  t5.py
plugin/: CMakeLists.txt
plugin/Source/: HttpClient.cpp  HttpClient.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ServerLauncher.cpp  ServerLauncher.h
scripts/: demucs_diag.py  demucs_e2e_demo.py  demucs_native_44k_test.py  setup_plugin_remote.sh
tests/: test_collections.py  test_credentials.py  test_demucs_e2e.py  test_description_gen.py  test_enrichment.py  test_flywheel.py  test_imports.py  test_library_api.py  test_library_cache.py  test_library_integration.py  test_phase6.py  test_phase7b.py  test_pipeline_errors.py  test_server.py  test_server_flywheel.py  test_taste.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
(+58 files in other folders)
